<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/state_view_empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/width_image_product"
        android:layout_height="@dimen/width_image_product"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_view_list"
        android:layout_centerInParent="true"/>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/text_empty"
        style="@style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/image"
        android:text="@string/item_products"
        tools:text="@string/label_empty_products" />

</RelativeLayout>